--- a/input.in
+++ b/input.in
@@ -1,2 +1,18 @@
-10 10
-1 6 3 2 7 9 8 4 10 5
+06:00 12:00 18:00
+06:00 shinyo17
+06:00 kimchist
+06:00 swoon
+06:00 kheee512
+06:00 Green55
+09:00 kimchist
+11:59 shinyo17
+12:00 kimchist
+17:59 swoon
+17:59 swoon
+18:00 kheee512
+18:01 swoon
+18:01 Green55
+18:01 kheee512
+18:01 swoon
+18:21 jinius36
+18:40 jeongyun1206
